@@ -37,6 +37,7 @@
   * BARControl: fixed error handling when slave is in
     disconnected state
   * BARControl: added tooltip for total entries
+  * BARControl: fixed clone job and update view
 
 2023-04-16 0.22g
   * fixed lost resource in debug version
